<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Add product to list" />
    <item
        android:id="@+id/createList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Create a list" />
    <item
        android:id="@+id/deleteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Delete a list" />
</menu>